--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 /*---------------------------------
-RESETS 
+RESETS
 ------------------------------------------*/
 
-* { 
-    margin: 0; 
-    padding: 0; 
+* {
+    margin: 0;
+    padding: 0;
 }
 
-a  { 
-	text-decoration: none; 
-	outline: 0; 
+a  {
+	text-decoration: none;
+	outline: 0;
 }
 
 a img { border: 0; }
@@ -39,11 +39,11 @@ p { line-height: 1.5; margin: 0 0 15px 0; }
 GLOBAL
 ------------------------------------------*/
 
-html, body { 
-	margin: 20px 0 0 0; 
+html, body {
+	margin: 20px 0 0 0;
  	padding:0 0 0 10px;
- 	background-color: #f9f9f9;
- 	text-align: center; 
+ 	background-color: #000000;
+ 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	color: #000000;
@@ -55,16 +55,16 @@ HEADINGS
 
 h1 {
 	margin: 0 0 0.5em 0;
-	padding: 0;	
-	line-height: 1.5em;	
+	padding: 0;
+	line-height: 1.5em;
 	font-size: 14px;
 	color: #000000;
 }
 
 h2 {
 	margin: 0 0 0.5em 0;
-	padding: 0;	
-	line-height: 1.5em;	
+	padding: 0;
+	line-height: 1.5em;
 	font-size: 12px;
 	color: #000000;
 }
@@ -105,10 +105,10 @@ ol li {
 	padding: 0;
 }
 
-label.error { 
+label.error {
 	display: block;
-	color: red;                              
-	font-size: 11px; 
+	color: red;
+	font-size: 11px;
 	font-weight: bold;
 }
 
@@ -126,25 +126,25 @@ form#contact fieldset {
 	border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
-    -moz-box-shadow: 0px 0px 10px #d3d3d3; 
-	-webkit-box-shadow: 0px 2px 10px #d3d3d3; 
-	box-shadow: 0px 0px 10px #d3d3d3; 
+    -moz-box-shadow: 0px 0px 10px #d3d3d3;
+	-webkit-box-shadow: 0px 2px 10px #d3d3d3;
+	box-shadow: 0px 0px 10px #d3d3d3;
 }
 
-form#contact input[type="text"], input[type="url"], 
+form#contact input[type="text"], input[type="url"],
 input[type="email"], input[type="tel"], textarea {
 	margin: 3px 0 0 0;
-	padding: 6px; 
-	width: 260px; 
-	font-family: arial, sans-serif; 
-	font-size: 12px; 
+	padding: 6px;
+	width: 260px;
+	font-family: arial, sans-serif;
+	font-size: 12px;
 	border: 1px solid #ccc;
     background: -webkit-gradient(linear, left top, left 15, from(#FFFFFF), color-stop(4%, #f4f4f4), to(#FFFFFF));
     background: -moz-linear-gradient(top, #FFFFFF, #f4f4f4 1px, #FFFFFF 15px);
 }
 
 form#contact textarea {
-	width: 275px; 
+	width: 275px;
 	height: 150px;
 }
 
@@ -156,12 +156,12 @@ form#contact label {
 	font-weight: bold;
 }
 
-form#contact label.error { 
+form#contact label.error {
 	width: 270px;
 	margin: 3px 0 0 0;
 	display: block;
-	color: #cf0101;                              
-	font-size: 11px; 
+	color: #cf0101;
+	font-size: 11px;
 	text-align: right;
 }
 
